# charged-current

./: .gitignore  CKM.cpp  CMakeLists.txt  ChargedCurrentDIS  ChargedCurrentDISTests  Coefficients.cpp  Constants.cpp  Coupling.cpp  CrossSection  CrossSection.cpp  DIS.cpp  DISComputation.cpp  Flavor.cpp  Integrator.cpp  PDFEvaluation.cpp  README.md  Row.cpp  Tests  Tests.cpp  Utility.cpp  codesign.sh  generic.job  generic_noarray.job  hq_array  hq_task  mahti_epps_array.job  mahti_ncteq_array.job  output  output2  slurm_array  slurm_noarray  task
ChargedCurrent/: Analysis.cpp  CMakeLists.txt  Constants.cpp  DIS.cpp  Parameters.cpp  SIDIS.cpp  Utility.cpp  main.cpp
CrossSection.dSYM/Contents/Resources/DWARF/: CrossSection
Slurm/: dis.job  generic_noarray.job  sidis_errors.job  sidis_isospin_errors.job  sidis_others.job  sidis_scales.job  submit_dis_errors_epps.sh  submit_dis_errors_ncteq.sh  submit_dis_errors_nnnpdf.sh  submit_dis_scales_epps.sh  submit_dis_scales_ncteq.sh  submit_dis_scales_nnnpdf.sh  submit_sidis_errors_epps.sh  submit_sidis_errors_ncteq.sh  submit_sidis_errors_nnnpdf.sh  submit_sidis_isospin_errors_epps.sh  submit_sidis_isospin_errors_ncteq.sh  submit_sidis_isospin_errors_nnnpdf.sh  submit_sidis_others_epps.sh  submit_sidis_others_ncteq.sh  submit_sidis_others_nnnpdf.sh  submit_sidis_scales_epps.sh  submit_sidis_scales_ncteq.sh  submit_sidis_scales_nnnpdf.sh  xintegrated.job
Tests.dSYM/Contents/: Info.plist
Tests.dSYM/Contents/Resources/DWARF/: Tests
cmake/: FindCuba.cmake  FindLHAPDF.cmake  FindPythia8.cmake
libChargedCurrent/: CMakeLists.txt
libChargedCurrent/ChargedCurrent/Analysis/: Analysis.cpp  CMakeLists.txt  Constants.cpp  DIS.cpp  Parameters.cpp  SIDIS.cpp  Utility.cpp
libChargedCurrent/ChargedCurrent/Common/: CKM.cpp  CMakeLists.txt  Constants.cpp  Coupling.cpp  Flavor.cpp  Particle.cpp  PerturbativeQuantity.cpp  Process.cpp  ScaleDependence.cpp  StructureFunction.cpp  TRFKinematics.cpp
libChargedCurrent/ChargedCurrent/DIS/: CMakeLists.txt  DIS.cpp  DISComputation.cpp  DISFunctions.cpp
libChargedCurrent/ChargedCurrent/DIS/Coefficients/: CMakeLists.txt  F2.cpp  F3.cpp  FL.cpp  Helper.cpp  Scale.cpp
libChargedCurrent/ChargedCurrent/Decay/: CMakeLists.txt  Decay.cpp  DecayFunctions.cpp  DecayParametrization.cpp
libChargedCurrent/ChargedCurrent/Integration/: CMakeLists.txt  IntegrationParameters.cpp  Integrator.cpp  Integrator1D.cpp  Integrator2D.cpp
libChargedCurrent/ChargedCurrent/Interpolation/: CMakeLists.txt  GridGenerator.cpp  InterpolatingFunction.cpp
libChargedCurrent/ChargedCurrent/Legacy/: GSLIntegrator.cpp
libChargedCurrent/ChargedCurrent/PDF/: CMakeLists.txt  FragmentationConfiguration.cpp  FreezeExtrapolator.cpp  PDFConcept.cpp
libChargedCurrent/ChargedCurrent/PDF/Interfaces/: CMakeLists.txt  FunctionalFormInterface.cpp  LHAInterface.cpp  LHANuclearInterface.cpp  LHASetInterface.cpp
libChargedCurrent/ChargedCurrent/SIDIS/: CMakeLists.txt  SIDIS.cpp  SIDISComputation.cpp  SIDISFunctions.cpp
libChargedCurrent/ChargedCurrent/SIDIS/Coefficients/: CMakeLists.txt  EvaluationParameters.cpp  F2.cpp  F3.cpp  FL.cpp  Helper.cpp  NearThreshold.cpp  Scale.cpp
libChargedCurrent/ChargedCurrent/Threading/: CMakeLists.txt  ThreadResult.cpp  shared_multi_future.cpp
libChargedCurrent/ChargedCurrent/Utility/: CMakeLists.txt  Globals.cpp  Math.cpp  Utility.cpp
src/: Analysis.cpp  CKM.cpp  ChargedCurrentDIS.cpp  CommonFunctions.cpp  Constants.cpp  Coupling.cpp  CrossSection.cpp  CubaIntegrator.cpp  DIS.cpp  DISComputation.cpp  DISFunctions.cpp  Decay.cpp  DecayFunctions.cpp  DecayParametrization.cpp  DeltaInterface.cpp  FFInterface.cpp  Flavor.cpp  FragmentationConfiguration.cpp  FunctionalFormInterface.cpp  GSLIntegrator.cpp  Integrator.cpp  LHAInterface.cpp  LHAPDFInterface.cpp  PDFCommon.cpp  PDFConcept.cpp  PDFEvaluation.cpp  PDFFF.cpp  PDFInterface.cpp  Particle.cpp  PerturbativeQuantity.cpp  PerturbativeResult.cpp  Process.cpp  PythiaSIDIS.cpp  SIDIS.cpp  SIDISComparison.cpp  SIDISComputation.cpp  SIDISFunctions.cpp  ScaleDependence.cpp  StructureFunction.cpp  TRFKinematics.cpp  (+4 more)
src/Analysis/: Analysis.cpp  Constants.cpp  DIS.cpp  Parameters.cpp  SIDIS.cpp
src/Common/: CKM.cpp  CommonFunctions.cpp  Constants.cpp  Coupling.cpp  Flavor.cpp  Particle.cpp  PerturbativeQuantity.cpp  Process.cpp  ScaleDependence.cpp  StructureFunction.cpp  TRFKinematics.cpp
src/DIS/: DIS.cpp  DISComputation.cpp  DISFunctions.cpp
src/DIS/Coefficients/: F2.cpp  F3.cpp  FL.cpp  Helper.cpp  Scale.cpp  Utility.cpp
src/Decay/: Decay.cpp  DecayFunctions.cpp  DecayParametrization.cpp
src/Integration/: AnalyticIntegration.cpp  IntegrationParameters.cpp  Integrator.cpp
src/Legacy/: FilePath.cpp  GSLIntegrator.cpp  PDFCommon.cpp  PythiaSIDIS.cpp  Row.cpp
src/PDF/: FragmentationConfiguration.cpp  PDFConcept.cpp
src/PDF/Interfaces/: FunctionalFormInterface.cpp  LHAInterface.cpp  LHASetInterface.cpp
src/SIDIS/: SIDIS.cpp  SIDISComputation.cpp  SIDISFunctions.cpp
src/SIDIS/Coefficients/: F2.cpp  F3.cpp  FL.cpp  Helper.cpp  NearThreshold.cpp  Scale.cpp
src/Tests/: Tests.cpp
src/Utility/: Globals.cpp  Math.cpp  Tests.cpp  Utility.cpp
tests/: CMakeLists.txt  main.cpp
